# zotero-webviewer

./: .gitignore  DEPLOYMENT.md  README.md  build.py  full.rdf  pyproject.toml  pytest.ini  sample.rdf  serve.py  test_syntax.html
.github/workflows/: deploy.yml
.kiro/specs/literature-webviewer/: design.md  requirements.md  tasks.md
.kiro/specs/zotero-webviewer/: design.md  tasks.md
output/: README.md  app.js  index.html  styles.css
output/data/: bibliography.json  collections.json  search_index.json
src/literature_webviewer/: __init__.py  build_pipeline.py  cli.py  data_transformer.py  json_generator.py  rdf_parser.py  site_generator.py
src/zotero_webviewer/: build_pipeline.py  cli.py  collection_builder.py  json_generator.py  production_optimizer.py  rdf_parser.py  site_generator.py
templates/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_collection_builder.py  test_data_transformer.py  test_integration.py  test_json_generator.py  test_rdf_parser.py  test_web_interface.py
