[project]
name = "literature-webviewer"
version = "0.1.0"
description = "A static website generator for browsing Zotero literature collections"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rdflib>=7.0.0",
    "jinja2>=3.1.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
watch = ["watchdog>=3.0.0"]

[project.scripts]
literature-webviewer = "literature_webviewer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
